# hl-read

./: .gitignore  LICENSE  README.md  pyproject.toml
_planning/: layer1-expansion-plan.md  phase1-loop-backlog.md  phase2-loop-backlog.md
hl_read/: __init__.py  cli.py  info.py  mcp_server.py
tests/: test_cli.py  test_info.py
