[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hl-read"
version = "0.4.0"
description = "Key-free, read-only toolkit for Hyperliquid - library, CLI, and MCP server. Structurally cannot trade."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "akagifreeez", email = "akagifreeezworks@gmail.com" }]
keywords = ["hyperliquid", "crypto", "trading", "mcp", "read-only", "defi", "perpetuals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["hyperliquid-python-sdk>=0.24,<1.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0,<2"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/akagifreeez/hl-read"
Repository = "https://github.com/akagifreeez/hl-read"
Issues = "https://github.com/akagifreeez/hl-read/issues"

[project.scripts]
hl-read = "hl_read.cli:main"
hl-read-mcp = "hl_read.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["hl_read"]
